<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item android:id="@+id/actionFavorite"
        android:icon = "@drawable/ic_favorite_white_24dp"
        app:showAsAction="always"
        android:title="@string/favorite" />

    <item android:id="@+id/actionReminder"
        android:icon = "@drawable/ic_reminder_white_24dp"
        app:showAsAction="always"
        android:title="@string/reminder" />

    <item android:id="@+id/actionSetting"
        android:icon = "@drawable/ic_settings_white_24dp"
        app:showAsAction="always"
        android:title="@string/setting" />
</menu>