<!--
    Created on Dec 2019
    Agung Pambudi <agung.pambudi5595@gmail.com>
-->

<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReminderActivity"
    android:orientation="vertical">

    <Switch
        android:id="@+id/swDaily"
        android:padding="10dp"
        android:text="@string/dailyReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Switch
        android:id="@+id/swRelease"
        android:padding="10dp"
        android:text="@string/releaseReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblMovieRelease"
        android:textColor="@color/colorZero"
        android:padding="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMoviesRelease"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_movie_release"/>

</LinearLayout>