<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MovieDetailActivity">

        <ProgressBar
            android:id="@+id/progressBarMovieDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.200" />

        <ImageView
            android:id="@+id/imgBackdropMovieDetail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:alpha="0.5"
            android:contentDescription="@string/exampleImage"
            android:scaleType="fitXY"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imgPosterMovieDetail"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/exampleImage"
            android:scaleType="fitXY"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgBackdropMovieDetail" />

        <TextView
            android:id="@+id/lblTabDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorFour"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/tabText1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBackdropMovieDetail"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txtTitleMovieDetail"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/exampleTitle"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTabDetail" />

        <TextView
            android:id="@+id/lblVoteMovieDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/labelVote"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txtTitleMovieDetail"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleMovieDetail" />

        <TextView
            android:id="@+id/txtVoteMovieDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/exampleVote"
            app:layout_constraintStart_toEndOf="@+id/lblVoteMovieDetail"
            app:layout_constraintTop_toTopOf="@+id/lblVoteMovieDetail" />

        <TextView
            android:id="@+id/lblDateMovieDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelDate"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/lblVoteMovieDetail"
            app:layout_constraintTop_toBottomOf="@+id/lblVoteMovieDetail" />

        <TextView
            android:id="@+id/txtDateMovieDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/exampleDate"
            app:layout_constraintStart_toEndOf="@+id/lblDateMovieDetail"
            app:layout_constraintTop_toTopOf="@+id/lblDateMovieDetail" />

        <TextView
            android:id="@+id/lblOverviewMovieDetail"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:text="@string/labelOverview"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/lblDateMovieDetail"
            app:layout_constraintTop_toBottomOf="@+id/lblDateMovieDetail" />

        <TextView
            android:id="@+id/txtOverviewMovieDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/exampleOverview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtTitleMovieDetail"
            app:layout_constraintStart_toStartOf="@+id/txtTitleMovieDetail"
            app:layout_constraintTop_toBottomOf="@+id/lblOverviewMovieDetail" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnMovieFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_favorite_border_black_24dp"
            app:layout_constraintEnd_toEndOf="@+id/txtTitleMovieDetail"
            app:layout_constraintTop_toTopOf="@+id/lblTabDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>