<!--
    Created on Dec 2019
    Agung Pambudi <agung.pambudi5595@gmail.com>
-->

<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.TVShowDetailActivity">

        <ProgressBar
            android:id="@+id/progressBarTVShowDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.200" />

        <ImageView
            android:id="@+id/imgBackdropTVShowDetail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:alpha="0.5"
            android:contentDescription="@string/exampleImage"
            android:scaleType="fitXY"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imgPosterTVShowDetail"
            android:layout_width="175dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/exampleImage"
            android:scaleType="fitXY"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgBackdropTVShowDetail" />

        <TextView
            android:id="@+id/lblTabDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorThree"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/tabText2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBackdropTVShowDetail"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txtNameTVShowDetail"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/exampleTitle"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTabDetail" />

        <TextView
            android:id="@+id/lblVoteTVShowDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/labelVote"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/txtNameTVShowDetail"
            app:layout_constraintTop_toBottomOf="@+id/txtNameTVShowDetail" />

        <TextView
            android:id="@+id/txtVoteTVShowDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/exampleVote"
            app:layout_constraintStart_toEndOf="@+id/lblVoteTVShowDetail"
            app:layout_constraintTop_toTopOf="@+id/lblVoteTVShowDetail" />

        <TextView
            android:id="@+id/lblDateTVShowDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelDate"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/lblVoteTVShowDetail"
            app:layout_constraintTop_toBottomOf="@+id/lblVoteTVShowDetail" />

        <TextView
            android:id="@+id/txtDateTVShowDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/exampleDate"
            app:layout_constraintStart_toEndOf="@+id/lblDateTVShowDetail"
            app:layout_constraintTop_toTopOf="@+id/lblDateTVShowDetail" />

        <TextView
            android:id="@+id/lblOverviewTVShowDetail"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="8dp"
            android:text="@string/labelOverview"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/lblDateTVShowDetail"
            app:layout_constraintTop_toBottomOf="@+id/lblDateTVShowDetail" />

        <TextView
            android:id="@+id/txtOverviewTVShowDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/exampleOverview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtNameTVShowDetail"
            app:layout_constraintStart_toStartOf="@+id/txtNameTVShowDetail"
            app:layout_constraintTop_toBottomOf="@+id/lblOverviewTVShowDetail" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnTVShowFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_favorite_border_black_24dp"
            app:layout_constraintEnd_toEndOf="@+id/txtNameTVShowDetail"
            app:layout_constraintTop_toTopOf="@+id/lblTabDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>